# cpp-idioms

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/copy_and_swap/: array_list.h
src/crtp/: singleton_crtp.h
src/tag_dispatching/: advance.hpp  distance.hpp
src/type_erasure/: animal.h
test/: CMakeLists.txt  array_list_test.cpp  tag_dispaching_test.cpp  tag_dispatching_test.cpp
